<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="250dp"
        android:layout_marginRight="250dp"
        android:layout_marginBottom="250dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="2">


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playPhrase"
            android:tag="doyouspeakenglish"
            android:text="@string/english"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playPhrase"
            android:tag="goodevening"
            android:text="@string/evening"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playPhrase"
            android:tag="hello"
            android:text="@string/hello"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button4"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playPhrase"
            android:tag="howareyou"
            android:text="@string/you"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button5"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playPhrase"
            android:tag="ilivein"
            android:text="@string/in"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button6"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playPhrase"
            android:tag="mynameis"
            android:text="@string/is"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button7"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playPhrase"
            android:tag="please"
            android:text="@string/please"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button8"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playPhrase"
            android:tag="welcome"
            android:text="@string/welcome"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />


    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>